@@ -11,6 +11,7 @@ G3DIT_DIR="$( cd -- "$(dirname "$0")" >/dev/null 2>&1 ; pwd -P )"
   --add-opens=java.desktop/javax.swing=ALL-UNNAMED \
   --add-opens=java.base/sun.nio.fs=ALL-UNNAMED \
   --add-opens=java.prefs/java.util.prefs=ALL-UNNAMED \
+  --enable-native-access=ALL-UNNAMED \
   -Dg3dit.mode=console \
   -Dg3dit.exefile="${G3DIT_DIR}/g3dit.sh" \
   -Djava.library.path="${G3DIT_DIR}:${G3DIT_DIR}/libs" \
